@@ -1,3 +1,12 @@
+2017-06-06  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-701
+
+	* src/m_oem.cc (x2artsScatSpecies): New WSM.
+
+	* src/m_cloudradar.cc (pnd_fieldCalcFromParticleBulkProps): Did
+	not work with no jacobian calculations.
+
 2017-06-06  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-700
